[package]
name = "gitignore-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitignore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
